# kotoba

./: .envrc  .gitignore  CAPABILITIES_README.md  Cargo.toml  DESIGN.md  Dockerfile  PUBLISH_GUIDE.md  README.md  REFACTOR.md  build_rs_cov.profraw  dag.jsonnet  debug_test.rs  dsl.libsonnet  flake.nix  kotoba.Cargo.toml  lib.jsonnet  simple_benchmark  simple_benchmark.rs  story.jsonnet  test-simple-site.kotoba  test_simple.jsonnet  topology_data.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-docs.yml  nix-build.yml  static.yml
Formula/: kotoba.rb
artifacts/: README.md
assets/templates/: index.html
benches/: graph_algorithms.rs  graph_operations.rs  jsonnet_benchmark.rs  parallel_benchmark  query_execution.rs  rewrite_operations.rs  simple_benchmark  storage_operations.rs
crates/005-vm/: Cargo.toml  README.md  dag.jsonnet
crates/050-vm/: README.md
crates/engidb/: Cargo.toml
crates/engidb/src/: adapter.rs  lib.rs
crates/kotoba-backup/: Cargo.toml
crates/kotoba-backup/src/: main.rs  point_in_time_recovery.rs  storage.rs
crates/kotoba-bench/: Cargo.toml  README.md
crates/kotoba-bench/src/: advanced_algorithms.rs  analyzer.rs  db_benchmark.rs  generator.rs  lib.rs  memory_usage.rs  metrics.rs  parallel_benchmark.rs  parallel_processing.rs  query_execution.rs  query_performance.rs  reporter.rs  runner.rs  storage_operations.rs  transaction_throughput.rs  workloads.rs
crates/kotoba-build/: Cargo.toml  README.md  kotoba-build.toml
crates/kotoba-build/src/: config.rs  lib.rs  tasks.rs  utils.rs  watcher.rs
crates/kotoba-cache/: Cargo.toml
crates/kotoba-cid/: Cargo.toml
crates/kotoba-cid/src/: calculator.rs  canonical_json.rs  lib.rs  manager.rs  merkle.rs
crates/kotoba-cli/: Cargo.toml  README.md
crates/kotoba-cli/src/: commands.rs  config.rs  lib.rs  logging.rs  main.rs  utils.rs
crates/kotoba-cloud-integrations/: Cargo.toml
crates/kotoba-cloud-integrations/src/: lib.rs
crates/kotoba-config/: README.md
crates/kotoba-core/: Cargo.toml  README.md
crates/kotoba-core/src/: lib.rs  pgview.rs  schema.rs  schema_validator.rs  types.rs
crates/kotoba-core/src/ir/: catalog.rs  mod.rs  strategy.rs
crates/kotoba-db/: Cargo.toml  README.md
crates/kotoba-db-cluster/: Cargo.toml  build.rs
crates/kotoba-db-cluster/src/: cluster.proto  cluster.rs  consensus.rs  lib.rs  membership.rs  networking.rs  partitioning.rs  replication.rs
crates/kotoba-db-core/: Cargo.toml  README.md
crates/kotoba-db-core/src/: engine.rs  lib.rs  types.rs
crates/kotoba-db-engine-lsm/: Cargo.toml  README.md
crates/kotoba-db-engine-lsm/src/: lib.rs
crates/kotoba-db-engine-memory/: Cargo.toml
crates/kotoba-db-engine-memory/src/: lib.rs
crates/kotoba-db/src/: lib.rs
crates/kotoba-deploy/: Cargo.toml
crates/kotoba-deploy-cli/: Cargo.toml  README.md
crates/kotoba-deploy-cli/src/: lib.rs  main.rs
crates/kotoba-deploy-controller/: Cargo.toml  README.md
crates/kotoba-deploy-core/: Cargo.toml  README.md
crates/kotoba-deploy-core/src/: lib.rs
crates/kotoba-deploy-network/: Cargo.toml  README.md
crates/kotoba-deploy-network/src/: lib.rs
crates/kotoba-deploy-runtime/: Cargo.toml
crates/kotoba-deploy-runtime/src/: lib.rs
crates/kotoba-deploy-scaling/: Cargo.toml  README.md
crates/kotoba-deploy-scaling/src/: lib.rs
crates/kotoba-deploy/src/: cli.rs  config.rs  controller.rs  git_integration.rs  hosting_manager.rs  hosting_server.rs  lib.rs  network.rs  parser.rs  runtime.rs  scaling.rs
crates/kotoba-distributed/: Cargo.toml
crates/kotoba-distributed/src/: cache_impl.rs  cluster_impl.rs  engine_impl.rs  lib.rs  task_impl.rs
crates/kotoba-docs/: Cargo.toml
crates/kotoba-docs/src/: config.rs  generator.rs  lib.rs  parser.rs  search.rs  server.rs  template.rs
crates/kotoba-event-stream/: Cargo.toml
crates/kotoba-event-stream/src/: event.rs  lib.rs  rocksdb_stream.rs  storage.rs
crates/kotoba-execution/: Cargo.toml  README.md
crates/kotoba-execution/src/: lib.rs
crates/kotoba-execution/src/execution/: executor.rs  gql_parser.rs  metrics.rs  physical_plan.rs
crates/kotoba-execution/src/planner/: logical.rs  mod.rs  optimizer.rs  physical.rs
crates/kotoba-graph/: Cargo.toml  README.md
crates/kotoba-graph/src/: lib.rs
crates/kotoba-graph/src/graph/: algorithms.rs  edge.rs  graph.rs  mod.rs  vertex.rs
crates/kotoba-handler/: Cargo.toml  README.md
crates/kotoba-handler/src/: executor.rs  integration.rs  lib.rs  runtime.rs  types.rs  web.rs
crates/kotoba-jsonnet/: Cargo.toml  README.md
crates/kotoba-jsonnet/src/: ast.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  stdlib.rs  value.rs
crates/kotoba-jsonnet/src/eval/: handlers.rs
crates/kotoba-jsonnet/src/runtime/: db.rs  external.rs  manager.rs  mod.rs
crates/kotoba-kotobanet/: Cargo.toml  README.md
crates/kotoba-kotobanet/src/: config.rs  deploy.rs  error.rs  frontend.rs  http_parser.rs  lib.rs
crates/kotoba-kotobas/: Cargo.toml  README.md
crates/kotoba-kotobas/src/: ai_chains.rs  ai_memory.rs  ai_models.rs  ai_tools.rs  error.rs  http_parser.rs  lib.rs
crates/kotoba-linter/: Cargo.toml
crates/kotoba-linter/src/: analyzer.rs  diagnostics.rs  lib.rs  reporter.rs  rules.rs
docs/: Gemfile  _config.yml  index.md  nix-development.md  performance.md
docs/_docs/: architecture.md  (+3 more)
examples/: README-Built-in-Handlers.md  demo_ui_debug.html  graphql-server.rs  phi_load.libsonnet  simple-static-build.rs  todo_realtime_demo.html
k8s/: Chart.yaml  README.md
research/: README.md  main.aux  main.out  main.tex  references.bib
schemas/: README.md
scripts/: benchmark_jsonnet.rs  generate_crates.py  kotoba-cli-launcher.js  prepare_publish.py  validate_topology.jsonnet
src/: cid.rs  cli.rs  distributed.rs  dsl.rs  gql.rs  graph_generated.rs  lib.rs  main.rs  network_protocol.rs  pgview.rs  realtime.rs  runtime.rs  schema.rs  schema_test.rs  schema_validator.rs  server.rs  topology.rs  types.rs  types_generated.rs  validator.rs  wasm_transpiler.rs
tests/: README.md  cluster_test.rs  ldbc_snb.rs  run_topology_tests.sh  simple_test.rs  topology_validation.rs
(+804 files in other folders)
