[workspace]
members = [
    ".",
    "crates/engidb",
    "crates/kotoba-types",
]

[package]
name = "eaf-ipg-runtime"
version = "0.2.0"
edition = "2021"
description = "Kotoba - Language Graph Database - Unified IR execution engine"
license = "Apache-2.0"

[dependencies]

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph algorithms and data structures
petgraph = { version = "0.6", features = ["serde-1"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime (for parallel execution)
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP Server
actix-web = "4.4"
actix-cors = "0.6"
actix = "0.13"
actix-web-actors = "4.2"

# Collections and utilities
indexmap = { version = "2.0", features = ["serde"] }
itertools = "0.12"
regex = "1.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# WebAssembly support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Event",
    "EventTarget",
] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Pure Rust compression (no native dependencies)
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }

# engidb = { path = "crates/engidb" } # Pure Rust version coming soon
kotoba-types = { path = "crates/kotoba-types" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
