[workspace]
members = [
    ".",
    "crates/engidb",
    "crates/kotoba-types",
]

[package]
name = "eaf-ipg-runtime"
version = "0.2.0"
edition = "2021"
description = "Kotoba - Language Graph Database - Unified IR execution engine"
license = "Apache-2.0"

[dependencies]

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph algorithms and data structures
petgraph = { version = "0.6", features = ["serde-1"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Pure Rust embedded database
sled = "0.34"


# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP Server (Pure Rust - Axum/Hyper)
axum = { version = "0.7", features = ["ws", "json", "form"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "request-id"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3"

# Collections and utilities
indexmap = { version = "2.0", features = ["serde"] }
itertools = "0.12"
regex = "1.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# WebAssembly support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Event",
    "EventTarget",
] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

engidb = { path = "crates/engidb" }
kotoba-types = { path = "crates/kotoba-types" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
