[package]
name = "engidb"
version = "0.1.0"
edition = "2021"

[dependencies]
kotoba-types = { path = "../kotoba-types" }
sled = "0.34"
cid = { version = "0.11.1", default-features = false, features = ["serde-codec"] }
serde_ipld_dagcbor = "0.4.0"
multihash = { version = "0.19.3", default-features = false, features = ["sha2"] }
sha2 = "0.10"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
default = []
# Enable to use FCDB adapter placeholder; real impl will add fcdb-* crates.
fcdb = []
