[package]
name = "kotoba-backup"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Automated backup and restore system for KotobaDB"
keywords = ["database", "backup", "restore", "recovery", "disaster-recovery"]
categories = ["database-implementations", "filesystem"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-backup"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
serde = { workspace = true, features = ['derive'] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
futures = "0.3"
tempfile = "3.0"
bytes = "1.0"
flate2 = "1.0"  # For compression
tar = "0.4"     # For archiving
walkdir = "2.0" # For directory traversal
parking_lot = "0.12"

# KotobaDB dependencies
kotoba-db = { path = "../kotoba-db", version = "0.1.0" }
kotoba-storage = { path = "../kotoba-storage", version = "0.1.16" }

# Optional cloud storage support
rusoto_core = { version = "0.48", optional = true }
rusoto_s3 = { version = "0.48", optional = true }
google-cloud-storage = { version = "0.11", optional = true }

[features]
default = []
cloud = ["rusoto_core", "rusoto_s3", "google-cloud-storage"]
compression = ["flate2", "tar"]

[dev-dependencies]
tokio-test = "0.4"
