[package]
name = "kotoba-bench"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
description = "Comprehensive benchmarking suite for KotobaDB"
keywords = ["benchmark", "performance", "testing", "database", "metrics"]
categories = ["development-tools::profiling", "database-implementations"]
documentation = "https://docs.rs/kotoba-bench"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
# KotobaDB core crates
kotoba-db-core = { path = "../kotoba-db-core", version = "0.1.16" }
kotoba-db-engine-memory = { path = "../kotoba-db-engine-memory", version = "0.1.16" }
kotoba-db-engine-lsm = { path = "../kotoba-db-engine-lsm", version = "0.1.16" }
kotoba-db = { path = "../kotoba-db", version = "0.1.16" }
# kotoba-db-cluster = { path = "../kotoba-db-cluster", version = "0.1.16", optional = true }  # Temporarily disabled

# Benchmarking utilities
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
hdrhistogram = "7.5"
plotters = { version = "0.3", optional = true }

# System monitoring
sysinfo = "0.30"

[features]
default = []
# cluster = ["kotoba-db-cluster"]  # Temporarily disabled
visualization = ["plotters"]

[[bench]]
name = "crud_operations"
harness = false
path = "src/crud_operations.rs"

[[bench]]
name = "query_performance"
harness = false
path = "src/query_performance.rs"

[[bench]]
name = "transaction_throughput"
harness = false
path = "src/transaction_throughput.rs"

[[bench]]
name = "memory_usage"
harness = false
path = "src/memory_usage.rs"

[[bench]]
name = "storage_operations"
harness = false
path = "src/storage_operations.rs"
