[package]
name = "kotoba-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kotoba Build Tool - Project build and task management system"
keywords = ["build", "task", "automation", "project", "management"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-build"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# File system operations
tokio-util = { version = "0.7", features = ["io"] }

# Configuration management
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
nix = { version = "0.26", features = ["process"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "6.1"

# Path manipulation
pathdiff = "0.2"

# Terminal UI
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Utilities
regex = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Kotoba ecosystem
kotoba-core = { path = "../kotoba-core", version = "0.1.17" }
# kotoba-package-manager = { path = "../kotoba-package-manager" }

[dev-dependencies]
tokio-test = "0.4"
