[workspace]

[package]
name = "kotoba-build"
version = "0.1.0"
edition = "2021"
description = "Kotoba Build Tool - Project build and task management system"
keywords = ["build", "task", "automation", "project", "management"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "kotoba-build"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Configuration management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File watching
notify = "6.1"

# Terminal UI
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Utilities
regex = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
nix = { version = "0.26", features = ["process"] }

[dev-dependencies]
tokio-test = "0.4"
