[package]
name = "kotoba-cli"
version = "0.1.21"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
description = "Command Line Interface for Kotoba graph processing system"
keywords = ["cli", "command-line", "graph", "processing", "tool"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-cli"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
# Kotoba ecosystem
kotoba-core = "0.1.21"
kotoba-graph = "0.1.21"
kotoba-execution = "0.1.21"
kotoba-rewrite = "0.1.21"
kotoba-storage = "0.1.21"
# kotoba-server = "0.1.21"  # Temporarily disabled due to workflow dependencies
kotoba-deploy = { path = "../kotoba-deploy", version = "0.1.16", optional = true }
kotoba-package-manager = { path = "../kotoba-package-manager", version = "0.1.16" }
kotoba-formatter = { path = "../kotoba-formatter", version = "0.1.16" }
kotoba-linter = { path = "../kotoba-linter", version = "0.1.16" }
kotoba-tester = { path = "../kotoba-tester", version = "0.1.16" }
# kotoba-build = { path = "../kotoba-build" }  # Temporarily disabled due to dependency conflicts
kotoba-repl = { path = "../kotoba-repl", version = "0.1.16" }
kotoba-docs = { path = "../kotoba-docs", version = "0.1.16" }

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
tokio-util = { version = "0.7", features = ["io"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"

# Terminal UI
console = "0.15"
dialoguer = "0.11"

[features]
default = ["deploy"]
deploy = ["kotoba-deploy"]

[[bin]]
name = "kotoba"
path = "src/main.rs"
