[package]
name = "kotoba-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kotoba-specific Jsonnet implementation compatible with Jsonnet 0.21.0"
keywords = ["graph", "database", "gql", "rewrite", "types"]
categories = ["data-structures", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-core"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Kotoba ecosystem
kotoba-security = { path = "../kotoba-security", optional = true }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]
security = ["dep:kotoba-security"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
