[package]
name = "kotoba-core"
version = "0.1.20"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kotoba-specific Jsonnet implementation compatible with Jsonnet 0.21.0"
keywords = ["graph", "database", "gql", "rewrite", "types"]
categories = ["data-structures", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-core"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
kotoba-errors = { version = "0.1.1", path = "../kotoba-errors" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Kotoba ecosystem
# kotoba-graph = "0.1.16" # Temporarily removed to break circular dependency
# kotoba-security = { path = "../kotoba-security", optional = true } # Temporarily disabled due to circular dependency

# Schema validation
schemars = { version = "0.8", optional = true }
jsonschema = "0.17"

# Regular expressions
regex = "1.10"

# Additional hash functions
blake3 = "1.8"

[features]
default = ["std", "schemars"]
std = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]
schemars = ["dep:schemars"]
# security = ["dep:kotoba-security"] # Temporarily disabled due to circular dependency

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
