[package]
name = "kotoba-db-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed clustering and consensus for KotobaDB"
keywords = ["database", "distributed", "clustering", "consensus", "raft"]
categories = ["database-implementations", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-db-cluster"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
serde = { workspace = true, features = ['derive'] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
uuid = { workspace = true, features = ["v4"] }
parking_lot = "0.12"
futures = "0.3"
rand = "0.8"
prost = "0.12"
tonic = { version = "0.10", features = ["transport", "tls"] }
tokio-stream = "0.1"
dashmap = "5.5"

# KotobaDB dependencies
kotoba-db-core = { path = "../kotoba-db-core", version = "0.1.0" }
kotoba-db = { path = "../kotoba-db", version = "0.1.0", optional = true }

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.10"

[features]
default = []
full = ["kotoba-db"]

[[bin]]
name = "kotoba-cluster"
path = "src/bin/main.rs"
required-features = ["full"]
