[package]
name = "kotoba-db-cluster"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
description = "Distributed clustering and consensus for KotobaDB"
keywords = ["database", "distributed", "clustering", "consensus", "raft"]
categories = ["database-implementations", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-db-cluster"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
serde = { workspace = true, features = ['derive'] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
uuid = { workspace = true, features = ["v4"] }
parking_lot = "0.12"
futures = "0.3"
rand = "0.8"
prost = "0.12"
tonic = { version = "0.10", features = ["transport", "tls"] }
tokio-stream = "0.1"
dashmap = "5.5"

# KotobaDB dependencies
kotoba-db-core = { path = "../kotoba-db-core", version = "0.1.16" }
kotoba-db = { path = "../kotoba-db", version = "0.1.16", optional = true }

[features]
default = []
full = ["kotoba-db"]

[[bin]]
name = "kotoba-cluster"
path = "src/bin/main.rs"
required-features = ["full"]
