[package]
name = "kotoba-db-core"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jun784/kotoba"
description = "Core database abstractions for Kotoba"
keywords = ["database", "core", "abstractions", "storage"]
categories = ["database-implementations", "data-structures"]
documentation = "https://docs.rs/kotoba-db-core"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
blake3 = "1.5"
async-trait = "0.1"

kotoba-core = { path = "../kotoba-core", version = "0.1.19" }
kotoba-cid = { path = "../kotoba-cid", version = "0.1.16" }
