[package]
name = "kotoba-db-engine-lsm"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
description = "LSM-Tree based database engine for KotobaDB"
keywords = ["database", "lsm", "engine", "storage", "rocksdb"]
categories = ["database-implementations", "data-structures"]
documentation = "https://docs.rs/kotoba-db-engine-lsm"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
async-trait = "0.1"

# Core dependencies
kotoba-db-core = { path = "../kotoba-db-core", version = "0.1.16" }

# Optional RocksDB backend
rocksdb = { version = "0.21", optional = true }

[features]
default = []
rocksdb = ["dep:rocksdb"]
