[package]
name = "kotoba-db-engine-memory"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
description = "In-memory database engine for KotobaDB"
keywords = ["database", "memory", "engine", "storage"]
categories = ["database-implementations", "data-structures"]
documentation = "https://docs.rs/kotoba-db-engine-memory"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
kotoba-db-core = { path = "../kotoba-db-core", version = "0.1.16" }
