[package]
name = "kotoba-db"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/com-junkawasaki/kotoba"
description = "High-performance embedded database for Kotoba ecosystem"
keywords = ["database", "embedded", "key-value", "storage", "engine"]
categories = ["database-implementations", "data-structures"]
documentation = "https://docs.rs/kotoba-db"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
kotoba-db-core = { path = "../kotoba-db-core", version = "0.1.16" }
kotoba-db-engine-memory = { path = "../kotoba-db-engine-memory", version = "0.1.16" }
kotoba-db-engine-lsm = { path = "../kotoba-db-engine-lsm", version = "0.1.16", optional = true }
kotoba-storage = { path = "../kotoba-storage" }

[features]
default = []
lsm = ["dep:kotoba-db-engine-lsm"]
