[package]
name = "kotoba-deploy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI interface for Kotoba deployment system"
keywords = ["cli", "deployment", "command-line", "tool"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-deploy-cli"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
# Kotoba dependencies
kotoba-core = { workspace = true }
kotoba-deploy-core = { path = "../kotoba-deploy-core", version = "0.1.15" }
kotoba-deploy-controller = { path = "../kotoba-deploy-controller", version = "0.1.15" }
kotoba-deploy-runtime = { path = "../kotoba-deploy-runtime", version = "0.1.15" }
kotoba-deploy-scaling = { path = "../kotoba-deploy-scaling", version = "0.1.15" }
kotoba-deploy-network = { path = "../kotoba-deploy-network", version = "0.1.15" }

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Common dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }

# File system and utilities
uuid.workspace = true
chrono.workspace = true
tempfile.workspace = true
dirs.workspace = true

# Progress display
indicatif = "0.17"

# Configuration file formats
toml = "0.8"

[[bin]]
name = "kotoba-deploy-cli"
path = "src/main.rs"
