[package]
name = "kotoba-deploy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and configuration for Kotoba deployment system"
keywords = ["deployment", "config", "types", "core"]
categories = ["data-structures", "config"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-deploy-core"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
# Kotoba core dependencies
kotoba-core = { workspace = true }
kotoba-errors = { workspace = true }

# Common dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
regex.workspace = true
tempfile.workspace = true
url.workspace = true
