[package]
name = "kotoba-deploy-scaling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Auto-scaling engine for Kotoba deployment system"
keywords = ["scaling", "autoscaling", "metrics", "load-balancing", "deployment"]
categories = ["concurrency", "algorithms", "development-tools"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-deploy-scaling"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
# Kotoba dependencies
kotoba-core = { workspace = true }
kotoba-deploy-core = { path = "../kotoba-deploy-core", version = "0.1.15" }

# Common dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
chrono.workspace = true

# Metrics and monitoring
hdrhistogram = "7.5"

# Statistical analysis
statistical = "1.0"

# Cost optimization（今後の拡張用）

# Advanced metrics
prometheus = "0.13"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"], default-features = false }

# Async utilities
futures.workspace = true

# Utilities
tempfile.workspace = true

# Random number generation
rand.workspace = true

# Feature flags（今後の拡張用）
[features]
default = []
# aws = ["aws-config", "aws-sdk-ec2", "aws-sdk-pricing"]  # 現在未使用
# full = ["aws"]  # 現在未使用
